CMake updated for moved SRC files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(CatchUp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp TreeEntry.cpp TreeEntry.h Date.cpp Date.h TreeBuilder.cpp TreeBuilder.h)
+set(SOURCE_FILES src/main.cpp src/TreeEntry.cpp src/TreeEntry.h src/Date.cpp src/Date.h src/TreeBuilder.cpp src/TreeBuilder.h)
 add_executable(CatchUp ${SOURCE_FILES})
